cluster/apps/monitoring/alertmanager/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: alertmanager
  namespace: monitoring
  labels:
    app: alertmanager
spec:
  selector:
    app: alertmanager
  ports:
    - name: alertmanager-web
      protocol: TCP
      port: 80
      targetPort: web
